--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
   
             <ul class="header-contacts list">
               <li class="header-contacts-list"><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
-              <li class="header-contacts-list"><a href="tel:+380961111111" class="header-mail">+38 096 111 11 11</a></li>
+              <li class="header-contacts-list"><a href="tel:+380961111111" class="header-phone">+38 096 111 11 11</a></li>
             </ul> 
         </div> 
       </header>
