--- a/index.html
+++ b/index.html
@@ -117,29 +117,94 @@
             <div class="container">
               <h2 class="section-title">Наша команда</h2>                
                 <ul class="our-team-list list">
+
                   <li class="teammate">                     
                     <img class="team-division" src="./images/fourth.jpg" alt="Дизайнер" width="270" height="260">  
-                    <h3 class="our-team-name">Игорь Демьяненко</h3>
-                    <p class="our-team-position" lang="en">Product Designer</p>                     
+                    <div class="teammate-section">
+                      <h3 class="our-team-name">Игорь Демьяненко</h3>
+                      <p class="our-team-position" lang="en">Product Designer</p>
+                      <ul class="socials-list">
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#instagram"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#twitter"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#facebook"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#linkedin"></use></svg></a>
+                        </li>
+                      </ul>
+                    </div>
                   </li>
 
                   <li class="teammate">          
                     <img class="team-division" src="./images/fifth.jpg" alt="Разработчик" width="270" height="260">
-                    <h3 class="our-team-name">Ольга Репина</h3>
-                    <p class="our-team-position" lang="en">Frontend Developer</p>                      
+                    <div class="teammate-section">
+                      <h3 class="our-team-name">Ольга Репина</h3>
+                      <p class="our-team-position" lang="en">Frontend Developer</p>
+                      <ul class="socials-list">
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-instagram"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-twitter"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-facebook"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-linkedin"></use></svg></a>
+                        </li>
+                      </ul>
+                    </div>                     
                   </li>
 
                   <li class="teammate">        
                     <img class="team-division" src="./images/sixth.jpg" alt="Маркетолог" width="270" height="260"> 
-                    <h3 class="our-team-name">Николай Тарасов</h3>
-                    <p class="our-team-position" lang="en">Marketing</p>                      
+                    <div class="teammate-section">
+                      <h3 class="our-team-name">Николай Тарасов</h3>
+                      <p class="our-team-position" lang="en">Marketing</p>
+                      <ul class="socials-list">
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-instagram"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-twitter"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-facebook"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-linkedin"></use></svg></a>
+                        </li>
+                      </ul>                   
+                  </div>                      
                   </li>
 
                   <li class="teammate">                 
                     <img class="team-division" src="./images/seventh.jpg" alt="Дизайнер UI" width="270" height="260">                        
-                    <h3 class="our-team-name">Михаил Ермаков</h3>
-                    <p class="our-team-position" lang="en">UI Designer</p>                      
-                  </li>
+                    <div class="teammate-section">
+                      <h3 class="our-team-name">Михаил Ермаков</h3>
+                      <p class="our-team-position" lang="en">UI Designer</p>
+                      <ul class="socials-list">
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-instagram"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-twitter"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-facebook"></use></svg></a>
+                        </li>
+                        <li class="socials-item">
+                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-linkedin"></use></svg></a>
+                        </li>
+                      </ul>                  
+                  </div>                     
+                  </li>                
                 </ul>
             </div>
           </section>
@@ -150,37 +215,37 @@
                 <ul class="customers-list list">
                   <li class="customer">
                     <!-- <div class="customers-logo"> -->
-                      <a class="customer-link one"  href="/"></a>
+                      <a class="customer-link one"  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
                     <!-- </div> -->
                   </li>
 
                   <li class="customer">
                     <div class="customers-logo">
-                      <a class="customer-link "  href="/"></a>
+                      <a class="customer-link "  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
                     </div>
                   </li>
 
                   <li class="customer">
                     <div class="customers-logo">
-                      <a class="customer-link"  href="/"></a>
+                      <a class="customer-link"  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
                     </div>
                   </li>
 
                   <li class="customer">
                     <div class="customers-logo">
-                      <a class="customer-link"  href="/"></a>
+                      <a class="customer-link"  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
                     </div>
                   </li>
 
                   <li class="customer">
                     <div class="customers-logo">
-                      <a class="customer-link"  href="/"></a>
+                      <a class="customer-link"  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
                     </div>
                   </li>
 
                   <li class="customer">
                     <div class="customers-logo">
-                      <a class="customer-link"  href="/"></a>
+                      <a class="customer-link"  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
                     </div>
                   </li> 
                   
