--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@
                       <p class="our-team-position" lang="en">Product Designer</p>
                       <ul class="socials-list">
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#instagram"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#instagram"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#twitter"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#twitter"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#facebook"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#facebook"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#linkedin"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#linkedin"></use></svg></a>
                         </li>
                       </ul>
                     </div>
@@ -147,16 +147,16 @@
                       <p class="our-team-position" lang="en">Frontend Developer</p>
                       <ul class="socials-list">
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-instagram"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#instagram"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-twitter"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#twitter"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-facebook"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#facebook"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-linkedin"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#linkedin"></use></svg></a>
                         </li>
                       </ul>
                     </div>                     
@@ -169,16 +169,16 @@
                       <p class="our-team-position" lang="en">Marketing</p>
                       <ul class="socials-list">
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-instagram"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#instagram"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-twitter"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#twitter"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-facebook"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#facebook"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-linkedin"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#linkedin"></use></svg></a>
                         </li>
                       </ul>                   
                   </div>                      
@@ -191,16 +191,16 @@
                       <p class="our-team-position" lang="en">UI Designer</p>
                       <ul class="socials-list">
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-instagram"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#instagram"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-twitter"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#twitter"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-facebook"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#facebook"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="social-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#icon-linkedin"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#linkedin"></use></svg></a>
                         </li>
                       </ul>                  
                   </div>                     
@@ -220,33 +220,33 @@
                   </li>
 
                   <li class="customer">
-                    <div class="customers-logo">
+                    <!-- <div class="customers-logo"> -->
                       <a class="customer-link "  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
-                    </div>
+                    <!-- </div> -->
                   </li>
 
                   <li class="customer">
-                    <div class="customers-logo">
+                    <!-- <div class="customers-logo"> -->
                       <a class="customer-link"  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
-                    </div>
+                    <!-- </div> -->
                   </li>
 
                   <li class="customer">
-                    <div class="customers-logo">
+                    <!-- <div class="customers-logo"> -->
                       <a class="customer-link"  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
-                    </div>
+                    <!-- </div> -->
                   </li>
 
                   <li class="customer">
-                    <div class="customers-logo">
+                    <!-- <div class="customers-logo"> -->
                       <a class="customer-link"  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
-                    </div>
+                    <!-- </div> -->
                   </li>
 
                   <li class="customer">
-                    <div class="customers-logo">
+                    <!-- <div class="customers-logo"> -->
                       <a class="customer-link"  href="/" target="_blank" rel="noopener noreferrer" aria-label="иконка Company"></a>
-                    </div>
+                    <!-- </div> -->
                   </li> 
                   
             </ul>
