--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,14 @@
             </nav>
   
             <ul class="header-contacts list">
-              <li class="header-contacts-list"><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
-              <li class="header-contacts-list"><a href="tel:+380961111111" class="header-phone">+38 096 111 11 11</a></li>
+                
+              <li class="header-contacts-list">
+
+                 <a class="header-mail" href="mailto:info@devstudio.com" ><svg class="header-icon" width="16" height="12"><use href="./images/sprite.svg#envelope"></use></svg>info@devstudio.com</a></li>
+                
+              <li class="header-contacts-list">
+
+                <a class="header-mail" href="tel:+380961111111"><svg class="header-icon" width="10" height="16"><use href="./images/sprite.svg#smartphone"></use></svg>+38 096 111 11 11</a></li>
             </ul> 
         </div> 
       </header>
