--- a/portfolio.html
+++ b/portfolio.html
@@ -139,17 +139,40 @@
         </main>
 
 <!-- Подвал -->
-      <footer class="footer">
-        <div class="container">
-          <a class="footer-logo link" lang="en" href="/">Web<span class="logo-footer">Studio</span></a>
+<footer class="footer">
+  <div class="container">
+    <div class="footer-info-container">
+      <div class="footer-adress">
+        <a class="footer-logo link" lang="en" href="/">Web<span class="logo-footer">Studio</span></a>
           <address>
             <ul class="footer-list">
               <li class="adress">г. Киев, пр-т Леси Украинки, 26</li>
               <li class="adress-list"><a class="footer-link link" href="mailto:info@example.com">info@example.com</a></li>
               <li class="adress-list"><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>  
-          </address>       
-        </div>             
-      </footer>  
+          </address>
+      </div>       
+  
+  
+      <div class="footer-invitation">
+        <p class="invitation-row">ПРИСОЕДЕНЯЙТЕСЬ</p>
+        <ul class="footer-socials">
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="footer-socials-icon" width="20" height="20"><use href="./images/sprite.svg#instagram"></use></svg></a>
+          </li>
+         <li class="footer-socials-item">
+            <a class="footer-socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="footer-socials-icon" width="20" height="20"><use href="./images/sprite.svg#twitter"></use></svg></a>
+          </li>
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="footer-socials-icon" width="20" height="20"><use href="./images/sprite.svg#facebook"></use></svg></a>
+           </li>
+         <li class="footer-socials-item">
+            <a class="footer-socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="footer-socials-icon" width="20" height="20"><use href="./images/sprite.svg#linkedin"></use></svg></a>
+          </li>        
+        </ul>
+      </div>
+    </div>
+</div>
+</footer>  
     </body>
 </html>
