--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </div>           
           </section>
         
-                     <!-- Особенности -->
+                     <!-- Особенности -->-----
 
           <section class="features-section section">
             <div class="container">
