dot removed in socials refference

--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
                       <p class="our-team-position" lang="en">Product Designer</p>
                       <ul class="socials-list">
                         <li class="socials-item">
-                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#instagram"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка instagram"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#instagram"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#twitter"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка twitter"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#twitter"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#facebook"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка facebook"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#facebook"></use></svg></a>
                         </li>
                         <li class="socials-item">
-                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="../images/sprite.svg#linkedin"></use></svg></a>
+                          <a class="socials-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка linkedin"><svg class="socials-icon" width="20" height="20"><use href="./images/sprite.svg#linkedin"></use></svg></a>
                         </li>
                       </ul>
                     </div>
