--- a/portfolio.html
+++ b/portfolio.html
@@ -61,9 +61,11 @@
               </ul>
 
               <ul class="our-work list"> 
-                <li class="our-work-item"> 
-                         
+                <li class="our-work-item">
+
+                  <a class="our-work-img" href="#">  
                   <img src="./images/eighth.jpg" alt="Технокряк" width="370" height="294">
+                  </a> 
                   <div class="our-work-card">
                   <h2 class="our-work-customer">Технокряк</h2>
                   <p class="our-work-description">Веб-сайт</p>
@@ -72,17 +74,21 @@
                 </li>
 
                 <li class="our-work-item">
-                  <span class="shadow">
+
+                  <a class="our-work-img" href="#">
                   <img src="./images/ninth.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                  </a>
                   <div class="our-work-card">
                   <h2 class="our-work-customer">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                  <p class="our-work-description">Дизайн</p>
-                </span>
+                  <p class="our-work-description">Дизайн</p>              
                 </div>
                 </li>
 
                 <li class="our-work-item">
+
+                  <a class="our-work-img" href="#">
                   <img src="./images/tenth.jpg" alt="Ресторан Seafood" width="370" height="294">
+                  </a>
                   <div class="our-work-card">
                   <h2 class="our-work-customer">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="our-work-description">Приложение</p>
@@ -90,7 +96,10 @@
                 </li>
 
                 <li class="our-work-item">
+
+                  <a class="our-work-img" href="#">
                   <img src="./images/eleventh.jpg" alt="Проект Prime" width="370" height="294">
+                  </a>
                   <div class="our-work-card">
                   <h2 class="our-work-customer">Проект <span lang="en">Prime</span></h2>
                   <p class="our-work-description">Маркетинг</p>
@@ -98,7 +107,10 @@
                 </li>
 
                 <li class="our-work-item">
+
+                  <a class="our-work-img" href="#">
                   <img src="./images/twelfth.jpg" alt="Проект Boxes" width="370" height="294">
+                  </a>
                   <div class="our-work-card">
                   <h2 class="our-work-customer">Проект <span lang="en">Boxes</span></h2>
                   <p class="our-work-description">Приложение</p>
@@ -106,7 +118,10 @@
                 </li>
 
                 <li class="our-work-item">
+
+                  <a class="our-work-img" href="#">
                   <img src="./images/thirteenth.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                  </a>
                   <div class="our-work-card">
                   <h2 class="our-work-customer" lang="en">Inspiration has no Borders</h2>
                   <p class="our-work-description">Веб-сайт</p>
@@ -114,7 +129,10 @@
                 </li>
 
                 <li class="our-work-item">
+
+                  <a class="our-work-img" href="#">
                   <img src="./images/fourteenth.jpg" alt="Издание Limited Edition" width="370" height="294">
+                  </a>
                   <div class="our-work-card">
                   <h2 class="our-work-customer">Издание <span lang="en">Limited Edition</span></h2>
                   <p class="our-work-description">Дизайн</p>
@@ -122,7 +140,10 @@
                 </li>
 
                 <li class="our-work-item">
+
+                  <a class="our-work-img" href="#">
                   <img src="./images/fifteenth.jpg" alt="Проект LAB" width="370" height="294">
+                  </a>
                   <div class="our-work-card">
                   <h2 class="our-work-customer">Проект <span lang="en">LAB</span></h2>
                   <p class="our-work-description">Маркетинг</p>
@@ -130,7 +151,10 @@
                 </li>
 
                 <li class="our-work-item">
+                  
+                  <a class="our-work-img" href="#">
                   <img src="./images/sixteenth.jpg" alt="Growing Business" width="370" height="294">
+                  </a>
                   <div class="our-work-card">
                   <h2 class="our-work-customer" lang="en">Growing Business</h2>
                   <p class="our-work-description">Приложение</p>
